# mlpdft

./: .gitignore  FitTorch_Pytorch.pt  LICENSE  LiBF4-minimal.in  LiFB-example.in  README.md  mlpdft.code-workspace  pyproject.toml  run_fitsnap3_patched.py
LiBF4/: QE_JOB  output.dump  qetodump2.py  qetodumptype.py  qetofitsnap4n.py  run_example
configs/fitsnap/: LiBF4-minimal.in  LiF-example.in  LiF64-NEWJSON.in
examples/LiF64_kjpaw_v2/: LiF64_kjpaw  qetodumptype.py  qetofitsnap4n.py
examples/lifbf4/: README.md
examples/lifbf4/converters/: qetodump2.py  qetodumptype.py  qetofitsnap4n.py
examples/lifbf4/qe/: G16.e12479323  QE_job.in
found_models/: first.md
model/: FitTorch_Pytorch.pt  LiF64_NEWJSON_pot.mliap.descriptor  LiF64_NEWJSON_pot.mod
scripts/: RandomSamplingSeed.txt  fitsnap_json_scrape.py  fitsnap_snap_matrix.py  mace_eval_fitsnap_test.py  mace_on_qe_out.py  random_energy_demo.py  random_energy_fitsnap.py  run_fitsnap3_patched.py  run_lif64_fitsnap.py  snap_bispectrum.py  toy_energy.py
